--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,13 @@
 version: '3.7'
 
 services:
-  ts-node-docker:
+  db:
+    image: postgres
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+  api:
     build:
       context: .
       dockerfile: Dockerfile
@@ -10,7 +16,6 @@ services:
       - ./src:/home/node/app/src
       - ./database:/home/node/app/database
       - ./nodemon.json:/home/node/app/nodemon.json
-    container_name: ts-node-docker
     expose:
       - '4000'
     ports:
