--- a/package.json
+++ b/package.json
@@ -12,18 +12,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express-session": "^1.17.10",
+    "@types/passport": "^1.0.16",
+    "@types/passport-local": "^1.0.38",
+    "connect-redis": "^7.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.11.3",
+    "redis": "^4.6.12",
     "sequelize": "^6.33.0",
-    "sqlite": "^5.0.1",
-    "sqlite3": "^5.1.6"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.19",
     "@types/sequelize": "^4.28.16",
-    "@types/sqlite3": "^3.1.9",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
   }
