--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
+    "qs": "^6.11.2",
     "redis": "^4.6.12",
-    "sequelize": "^6.33.0",
+    "sequelize": "^6.37.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
